# archive.aero

./: .gitignore  BUILD_PROCESS.md  CNAME  FSD.md  IMPROVEMENTS.md  PARALLEL_QUICKSTART.md  README.md  TRANSFORMER_README.md  Terminal Saved Output.txt  about.html  align_tif_gui.py  analyze_dole.py  cdx_examples.sh  check_chart_editions.py  cogandupload.sh  contribute.html  coverage.json  dates.csv  dole_dataset.py  early_master_dole.csv.bak  errors.md  faa_chart_slicer_gui.py  generate_map_tiles.sh  get_wayback_data.py  index.html  map.txt  master_dole_corrected.csv.bak  missing_from_master_dole.csv  newslicer.py  newslicer_logs.txt  newslicer_parallel.py  ocr_dates.py  ocr_dates_early.py  oldslicer.py  parallel_process.sh  pmandupload.sh  prototype-gaps.html  runlogs.txt  slicer.py  sources.html  (+9 more)
docs/: BUILD_PROCESS.md  FSD.md  GEOTIFF_OPTIMIZATION.md  NO_COMPRESSION_OPTIMIZATION.md  map.txt
pmandupload-rs/: Cargo.toml  IMPLEMENTATION.md  PERFORMANCE.md  QUICKSTART.md  README.md  build.sh  pmandupload
pmandupload-rs/docs/: README.md
pmandupload-rs/src/: main.rs
scripts/: analyze_dole.py  build_coverage.py  build_metadata_bundle.py  build_timeline_data.py  dole_v2.py  georef_apply_transfer.py  georef_infer_from_sibling.py  georef_infer_hawaiian_rotated.py  slicer.py  timeline_preview_gui.py
slicer-rs/: Cargo.toml
slicer-rs/src/: config.rs  csv_loader.rs  downloader.rs  file_index.rs  gdal_ops.rs  main.rs  processor.rs  utils.rs
tests/: flicker-regression-guard.html
worker/: .npmrc  README.md  package-lock.json  package.json  wrangler.toml
worklists/: 01_dole_slicer_failures.md  02_disk_vs_dole.md  03_web_sources_searched.md  04_georef_backlog.md  05_date_quality.md  06_publish_sync.md  07_download_queue.md  README.md
(+197 files in other folders)
